Added ipc and created canvas image

--- a/index.html
+++ b/index.html
@@ -1,10 +1,11 @@
 <html>
     <head>
         <title> A Newer and Improved Hentai Game</title>
+        
     </head>
     <body>
-        <h1>
-            Hello World!
-        </h1>
+        <canvas id="game_container">
+            <script src="renderer.js"></script>
+        </canvas>
     </body>
 </html>
