--- a/htmldocs/menu.html
+++ b/htmldocs/menu.html
@@ -1,10 +1,11 @@
 <html>
     <head>
-        <title> A Newer and Improved Hentai Game - Menu</title>
+        <title> A Newer and Improved Puzzle Game - Menu</title>
         <script src="../renderers/menu_renderer.js"></script>
+        <link rel="stylesheet" type="text/css" href=../css/menu.css>
     </head>
     <body>
-        <div id="pic_container"></div>
+        <div id="img_list_container"><script src="../renderers/image_selector_renderer.js"></script></div>
         <div id="drag_upload_container"></div>
         <div id="diff_selector_container"></div>
     </body>
