--- a/htmldocs/puzzle.html
+++ b/htmldocs/puzzle.html
@@ -1,9 +1,8 @@
 <html>
     <head>
         <title> A Newer and Improved Hentai Game - Puzzle</title>
-        <script src="../renderers/puzzle_renderer.js"></script>
     </head>
     <body>
-        <canvas id="game_container"></canvas>
+        <canvas id="game_container"><script src="../renderers/puzzle_renderer.js"></script></canvas>
     </body>
 </html>
